# npmai

./: Dockerfile  app.py  pyproject.toml  requirements.txt  settings.yml
Docs/templates/: index.html
models/Space1/: entrypoint.sh  main.py
models/Space10/: entrypoint.sh
models/Space2/: main.py
models/Space4/: main.py
models/Space6/: main.py
models/Space8/: entrypoint.sh
models/space14/: Dockerfile  main.py
templates/: index.html
